# TUI-plus-plus

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  package.json
.github/workflows/: build.yml  deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/get-started/: how-to-create-custom-widgets.md  install.md  why.md
docs/html/: Border_8hpp.html  Border_8hpp.js  Border_8hpp__incl.map  Border_8hpp__incl.md5  Border_8hpp_source.html  Console_8hpp.html  Console_8hpp.js  Console_8hpp__incl.map  Console_8hpp__incl.md5  Console_8hpp_source.html  IRenderable_8hpp.html  IRenderable_8hpp.js  IRenderable_8hpp__dep__incl.map  IRenderable_8hpp__dep__incl.md5  IRenderable_8hpp_source.html  Justification_8hpp.html  Justification_8hpp.js  Justification_8hpp__dep__incl.map  Justification_8hpp__dep__incl.md5  Justification_8hpp_source.html  MarkupText_8hpp.html  MarkupText_8hpp.js  MarkupText_8hpp__incl.map  MarkupText_8hpp__incl.md5  MarkupText_8hpp_source.html  Rule_8hpp.html  Rule_8hpp__incl.map  Rule_8hpp__incl.md5  Rule_8hpp_source.html  Text_8hpp.html  Text_8hpp.js  Text_8hpp__dep__incl.map  Text_8hpp__dep__incl.md5  Text_8hpp__incl.map  Text_8hpp__incl.md5  Text_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classtuipp_1_1Console-members.html  (+122 more)
docs/latex/: dir_11bdb9306f2c9ace19f1330d549d7fca.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68cdf330e0be698725b387715f4da62a.tex  dir_80e8f89260b72623ab713874e5cfa4cf.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  (+10 more)
scripts/: build.sh
test/: main.cpp
(+128 files in other folders)
